--- a/app/src/main/res/layout/content_start2.xml
+++ b/app/src/main/res/layout/content_start2.xml
@@ -10,10 +10,10 @@
     tools:showIn="@layout/activity_start2">
 
     <Button
-        android:text="scan"
+        android:text="List"
         android:layout_width="91dp"
         android:layout_height="51dp"
-        android:id="@+id/scan"
+        android:id="@+id/list"
         app:layout_constraintLeft_toLeftOf="@+id/content_start2"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
@@ -28,7 +28,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/content_start2"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/scan"
+        app:layout_constraintTop_toBottomOf="@+id/list"
         android:layout_marginTop="16dp" />
 
     <Button
@@ -42,14 +42,4 @@
         app:layout_constraintTop_toBottomOf="@+id/play"
         android:layout_marginTop="16dp" />
 
-    <Button
-        android:text="List"
-        android:layout_width="91dp"
-        android:layout_height="51dp"
-        android:id="@+id/list"
-        app:layout_constraintLeft_toLeftOf="@+id/content_start2"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/random_play"
-        android:layout_marginTop="16dp" />
 </android.support.constraint.ConstraintLayout>
