--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -19,4 +19,10 @@
         android:layout_height="wrap_content"
         android:textSize="18sp" />
 
+    <TextView
+        android:id="@+id/song_album"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
+
 </LinearLayout>
